--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -208,6 +208,15 @@ button:disabled:hover {
   background-color: #999999;
 }
 
+.text-by-button {
+    margin: 2px 6px 0;
+    padding: 5px;
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
+    display: inline-block;
+}
+
 .no-entities {
     margin-left: 10px;
 }
